--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2214,7 +2214,7 @@ input, select, textarea {
 		}
 
 		.tiles article.style2 > .image:before {
-			background-color: #7ecaf6;
+			background-color: #00000050;
 		}
 
 		.tiles article.style3 > .image:before {
