--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2096,8 +2096,9 @@ input, select, textarea {
 			position: relative;
 			display: block;
 			width: 100%;
-			border-radius: 4px;
+			border-radius: 40px;
 			overflow: hidden;
+			box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.199);
 			
 		}
 
