--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -162,7 +162,7 @@ input, select, textarea {
 		}
 
 	strong, b {
-		color: #ffffff;
+		color: #fff491;
 		font-weight: 600;
 	}
 
@@ -172,10 +172,11 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2rem 0;
+		color: #fff491;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: #fff491;
 		font-weight: 600;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -1210,6 +1211,7 @@ input, select, textarea {
 				height: calc(3.5rem + 1px);
 				background: #ffffff;
 				
+				
 			}
 
 		#header > :first-child {
@@ -1226,6 +1228,7 @@ input, select, textarea {
 			line-height: 5.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
+			
 		}
 
 			#header .logo .icon:before {
